test/trivial/deitz/type-param-mod-config/config_use_before_decl.chpl
writeln(x);

config var x : int = 12;

writeln(x);
